2001-01-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_chu.c: Start using HAVE_AUDIO.
	* ntpd/ntp_proto.c (clock_select): If about to discard an
	ephemeral association, do it only if not the system peer.
	From Dave Mills.

	* html/pic/wingdorothy.gif:
	* html/pic/bustardfly.gif:
	* html/pic/boom3a.gif:
	* html/pic/tonea.gif:
	* html/pic/stack1a.jpg:
	* html/pic/pogoa.gif:
	* html/pic/pogo8.gif:
	* html/pic/pogo6.gif:
	* html/pic/pogo5.gif:
	* html/pic/pogo4.gif:
	* html/pic/pogo3.gif:
	* html/pic/pogo1.gif:
	* html/pic/oz2.gif:
	* html/pic/flatheads.gif:
	* html/pic/boom4.gif:
	* html/pic/boom3.gif:
	* html/pic/appletree.gif:
	* html/pic/alice51.gif:
	* html/pic/alice44.gif:
	* html/pic/alice35.gif:
	* html/pic/alice31.gif:
	* html/pic/alice15b.gif:
	* html/pic/alice13.gif:
	* html/pic/alice11.gif:
	* html/release.htm:
	* html/rdebug.htm:
	* html/prefer.htm:
	* html/porting.htm:
	* html/ntptrace.htm:
	* html/ntpq.htm:
	* html/ntpdate.htm:
	* html/monopt.htm:
	* html/kernpps.htm:
	* html/index.htm:
	* html/hints.htm:
	* html/gadget.htm:
	* html/driver7.htm:
	* html/copyright.htm:
	* html/config.htm:
	* html/build.htm:
	* html/authopt.htm:
	* html/assoc.htm:
	* html/accopt.htm: 
	Cleanup from Dave Mills.

2000-12-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k13

	* ntpd/refclock_wwv.c (wwv_start): Call audio_init with DEVICE_AUDIO.
	* ntpd/refclock_irig.c (irig_start): Call audio_init with DEVICE_AUDIO.
	* ntpd/refclock_chu.c: Documentation cleanup.
	(DEVICE_AUDIO): Added.
	(fd_audio): Added.
	(chu_start): Separate audio from serial device.
	(chu_receive): Rewrite - get data from serial or audio device as
	appropriate.
	(chu_audio_receive): Renamed (from chu_receive) to allow both
	audio and serial capability.
	(chu_serial_receive): Ditto.
	(chu_decode): Do the Right Thing based on audio/serial data.
	* ntpd/ntp_refclock.c (refclock_open): Check for failure using <0
	instead of ==-1.
	* libntp/audio.c: Header cleanup, and remove